[package]
name = "sni-reverse-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
axum = "0.8.1"
clap = { version = "4.5.31", features = ["derive"] }
lazy_static = "1.5.0"
log = "0.4.26"
serde = { version = "1.0.218", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
tokio-rustls = "0.26.2"
utoipa = { version = "5.3.1", features = ["axum_extras"] }
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0.0", features = ["axum"] }
